fixed some spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ main .hero h1 {
 }
 @media (max-width: 600px) {
   main .hero h1 {
-    font-size: 4rem;
+    font-size: 3.5rem;
     color: white;
     margin-left: 1rem;
     margin-top: 8rem;
@@ -155,6 +155,8 @@ main .hero button {
 }
 @media (max-width: 600px) {
   main .hero button {
+    margin-left: 1.25rem;
+    margin-top: 0.75rem;
     padding: 1rem 7rem;
     align-self: center;
     justify-self: center;
@@ -203,6 +205,7 @@ main .hero button {
 @media (max-width: 600px) {
   #about .flexbox {
     flex-direction: column;
+    margin-bottom: 5rem;
   }
 }
 #about .flexbox .point {
