--- a/sass/input.scss
+++ b/sass/input.scss
@@ -121,7 +121,7 @@ main {
       line-height: 80%;
 
       @include media.sm {
-        font-size: 4rem;
+        font-size: 3.5rem;
         color: white;
         margin-left: 1rem;
         margin-top: 8rem;
@@ -157,6 +157,8 @@ main {
       margin-left: 3rem;
 
       @include media.sm {
+        margin-left: 1.25rem;
+        margin-top: 0.75rem;
         padding: 1rem 7rem;
 
         align-self: center;
@@ -206,6 +208,7 @@ main {
 
     @include media.sm {
       flex-direction: column;
+      margin-bottom: 5rem;
     }
 
     .point {
